# WiCKED

./: CITATION.cff  FIndWiggles.py  FitWiggles.py  LICENSE  Main.py  README.md  WiCKED.py  pyproject.toml
Examples/: Example_notebook.ipynb
__pycache__/: FIndWiggles.py  FitWiggles.py
src/: FitWiggles.py
src/wicked/: FIndWiggles.py  FitWiggles.py  WiCKED.py  __init__.py
