[project]
name = "wicked"
authors = [{name = "Antoine Dumont", email = "dumont@mpia.de"}]
description = "Wiggle Identification and Correction using Fourier Decomposition"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "numpy", "matplotlib","pandas", "photutils","astropy" , "mgefit==5.0.15"
]
dynamic = ['version']

[project.urls]
"Source Code" = "https://github.com/antoinedumontneira/WiCKED/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 130
exclude = [
    'docs',
    '.tox',
    '.eggs',
    'build',
    '*_version.py',
]
# linters: flake8, black, ruff

[tool.ruff]
line-length = 130
extend-exclude = ["docs", ".tox", ".eggs", "build", "*_version.py"]
fix = true
format = "grouped"

[tool.ruff.lint]
select = ["ALL"]
ignore = []